src/test/deca/context/valid/doubleAffectation.deca
{
    int a = 4;
    float d = (a=6);
}