src/test/deca/context/invalid/method_name_isType.deca
//ERROR :4
class A{

int int(int a){
    return a+a;
}

}